Fixed screen scrolling issue when moving snake on smaller screen

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,8 +5,8 @@
 }
 
 body {
-  height: 100vh;
-  /* background-color: #696869; */
+  height: 100%;
+  width: 100%;
   background-image: url("../img/background2.jpg");
   background-repeat: repeat;
 }
@@ -42,7 +42,6 @@ H1 {
   font-family: 'Press Start 2P', cursive;
   font-size: 80px;
   text-align: center;
-  /* color: #FFF !Important; */
   z-index: 1;
   background-image: linear-gradient(45deg, #020aeb, #eb0000);
   background-size: 100%;
@@ -62,6 +61,7 @@ H1 {
   -webkit-text-fill-color: transparent;
   font-weight: bold;
 }
+
 .tabs {
   width: 610px;
   height: 35px;
@@ -107,6 +107,7 @@ ul {
 li:hover {
   background-color: #dbdbdb
 }
+
 .grid {
   width: 610px;
   height: 610px;
@@ -115,6 +116,7 @@ li:hover {
   border: 5px solid black;
   box-shadow: 2px 2px 5px black;
  }
+ 
 .block {
   height: 25px;
   width: 25px;
